-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
5.0.0
-
None
The JsonDbClient::query() with bindings example uses binding name with '%', but it should be plain name, e.g. like in the JsonDbQuery::bindValue() example.
Currently:
bindings.insert(QLatin1String("%name"), name);
Should be:
bindings.insert(QLatin1String("name"), name);
For Gerrit Dashboard: QTBUG-23923 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
14483,1 | Doc fix for JsonDbClient::query(QString,int,int) | master | {graveyard}/qtjsondb | Status: MERGED | +2 | 0 |