Doc fix for JsonDbClient::query(QString,int,int)

Task-number: QTBUG-23923
Change-Id: I4cf045842275bbf6abfcfbd70eb20ace3643f0a4
Reviewed-by: Prasanth Ullattil <prasanth.ullattil@nokia.com>